--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "emailjs": "^4.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^11.5.4",
